--- a/package.json
+++ b/package.json
@@ -34,5 +34,8 @@
 		"@11ty/eleventy-plugin-syntaxhighlight": "^5.0.0",
 		"luxon": "^3.3.0",
 		"markdown-it-anchor": "^8.6.7"
+	},
+	"dependencies": {
+		"markdown-it-attrs": "^4.1.6"
 	}
 }
