--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "personal-website",
-	"version": "8.0.0",
+	"version": "1.0.0",
 	"description": "sadeghmohebbi personal website and blog inhierent from eleventy-base-blog",
 	"scripts": {
 		"build": "npx @11ty/eleventy",
@@ -33,9 +33,7 @@
 		"@11ty/eleventy-plugin-rss": "^1.2.0",
 		"@11ty/eleventy-plugin-syntaxhighlight": "^5.0.0",
 		"luxon": "^3.3.0",
-		"markdown-it-anchor": "^8.6.7"
-	},
-	"dependencies": {
+		"markdown-it-anchor": "^8.6.7",
 		"markdown-it-attrs": "^4.1.6"
 	}
 }
