--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
 		"build": "npx @11ty/eleventy",
 		"build-ghpages": "npx @11ty/eleventy --pathprefix=/eleventy-base-blog/",
 		"start": "npx @11ty/eleventy --serve --quiet",
+		"serve": "http-server ./_site",
 		"dev": "npx @11ty/eleventy --serve --watch",
 		"debug": "DEBUG=Eleventy* npx @11ty/eleventy",
 		"debugstart": "DEBUG=Eleventy* npx @11ty/eleventy --serve --quiet",
@@ -35,6 +36,7 @@
 		"clean-css": "^5.3.3",
 		"glob": "^10.3.10",
 		"html-minifier-terser": "^7.2.0",
+		"http-server": "^14.1.1",
 		"luxon": "^3.3.0",
 		"markdown-it-anchor": "^8.6.7",
 		"markdown-it-attrs": "^4.1.6"
