--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
 		"http-server": "^14.1.1",
 		"luxon": "^3.3.0",
 		"markdown-it-anchor": "^8.6.7",
-		"markdown-it-attrs": "^4.1.6"
+		"markdown-it-attrs": "^4.1.6",
+		"markdown-it-for-inline": "^2.0.1"
 	}
 }
