--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
 		"dev": "eleventy --serve --watch",
 		"debug": "DEBUG=Eleventy* eleventy",
 		"debugstart": "DEBUG=Eleventy* eleventy --serve --quiet",
-		"benchmark": "DEBUG=Eleventy:Benchmark* eleventy"
+		"benchmark": "DEBUG=Eleventy:Benchmark* eleventy",
+		"publish": "node ./scripts/publish-to-s3.js"
 	},
 	"repository": {
 		"type": "git",
@@ -33,7 +34,9 @@
 		"@11ty/eleventy-plugin-bundle": "^1.0.4",
 		"@11ty/eleventy-plugin-rss": "^1.2.0",
 		"@11ty/eleventy-plugin-syntaxhighlight": "^5.0.0",
+		"@aws-sdk/client-s3": "^3.846.0",
 		"clean-css": "^5.3.3",
+		"dotenv": "^17.2.0",
 		"glob": "^10.3.10",
 		"html-minifier-terser": "^7.2.0",
 		"http-server": "^14.1.1",
