new tab only set for external links

--- a/package.json
+++ b/package.json
@@ -35,7 +35,9 @@
 		"@11ty/eleventy-plugin-rss": "^1.2.0",
 		"@11ty/eleventy-plugin-syntaxhighlight": "^5.0.0",
 		"@aws-sdk/client-s3": "^3.846.0",
+		"async": "^3.2.6",
 		"clean-css": "^5.3.3",
+		"cli-progress": "^3.12.0",
 		"dotenv": "^17.2.0",
 		"glob": "^10.3.10",
 		"html-minifier-terser": "^7.2.0",
@@ -43,6 +45,7 @@
 		"luxon": "^3.3.0",
 		"markdown-it-anchor": "^8.6.7",
 		"markdown-it-attrs": "^4.1.6",
-		"markdown-it-for-inline": "^2.0.1"
+		"markdown-it-for-inline": "^2.0.1",
+		"mime": "^4.0.7"
 	}
 }
